# llm-chat

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  SKILLS_GUIDE.md
backend/: README.md  pyproject.toml
backend/.claude/skills/code-review/: SKILL.md  TEMPLATE.md
backend/.claude/skills/concise-mode/: SKILL.md
backend/.claude/skills/marketing-tone/: SKILL.md
backend/.claude/skills/structured-report/: SKILL.md  example_report.md
backend/.claude/skills/technical-docs/: SKILL.md
backend/llmchat/: manage.py
backend/llmchat/app/: models.py  serializers.py  urls.py  views.py
backend/llmchat/app/migrations/: 0001_initial.py  0002_message_tool_calls.py
backend/llmchat/llmchat/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/llmchat/static/frontend/: main.js
backend/llmchat/templates/: index.html
backend/llmchat/utils/: __init__.py  claude_agent_utils.py  llm_artifacts_system_message.py  llm_utils.py
frontend/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/src/: App.js
frontend/src/components/: ArtifactViewer.js  BotMessage.js  Chat.js  GrowingTextArea.js  HiddenSidebar.js  LandingPage.js  MessageContent.js  ThreadList.js
frontend/src/components/artifact/: ArtifactButton.js  ArtifactViewer.js  SidePanel.js
frontend/src/components/chat/: BotMessage.js  MessageContent.js  ToolCallViewer.js  UserMessage.js
frontend/src/components/sidebar/: HiddenSidebar.js  (+1 more)
frontend/src/contexts/: SidePanelContext.js
frontend/src/styles/: app.css
(+4 files in other folders)
